--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="blueBox" id="qa-block">
+  <div id="qa-block" class="blueBox">
     <div class="yellowBox">
       <div class="text">
         In programming languages, a closure is a technique for
