--- a/src/index.html
+++ b/src/index.html
@@ -13,27 +13,27 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div id="qa-block" class="blueBox">
-    <div class="yellowBox">
-      <div class="text">
+  <div id="qa-block" class="blueBox box">
+    <div class="yellowBox box">
+      <div class="text box">
         In programming languages, a closure is a technique for
         implementing lexically scoped name binding in a language with first-class functions.
         Operationally, a closure is a record storing a function together with an environment.
       </div>
     </div>
   </div>
-  <div class="blueBox">
-    <div class="yellowBox">
-      <div class="text">
+  <div class="blueBox box">
+    <div class="yellowBox box">
+      <div class="text box">
         У програмуванні замиканням називають підпрограму, що виконується в середовищі,
         яке містить одну або більше зв’язаних змінних. Підпрограма має доступ
         до цих змінних під час виконання.
       </div>
     </div>
   </div>
-  <div class="blueBox">
-    <div class="yellowBox">
-      <div class="text">
+  <div class="blueBox box">
+    <div class="yellowBox box">
+      <div class="text box">
         Замыкание в программировании — функция первого класса,
         в теле которой присутствуют ссылки на переменные,
         объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.
